@@ -31,6 +31,9 @@ Post v24.03.0
     has been renamed to "options:ic-route-denylist" in order to comply with
     inclusive language guidelines. The previous name is still recognized to
     aid with backwards compatibility.
+  - Add support for CT zone limit that can be specified per LR
+    (options:ct-zone-limit), LS (other_config:ct-zone-limit) or LSP
+    (options:ct-zone-limit).
 
 OVN v24.03.0 - 01 Mar 2024
 --------------------------
